try safari flicker fix 2

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,6 +99,7 @@ a {
 /***** classes *****/
 
 .navbar {
+    --webkit-transform-style: preserve-3d;
   animation: 0.4s ease-out 0s 1 slideInFromLeft;
   position: fixed;
   background-color: var(--bg-primary);
@@ -110,6 +111,7 @@ a {
 }
 
 .navbar-nav {
+    --webkit-transform-style: preserve-3d;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -311,6 +313,7 @@ display: block;
   }
 
   .navbar {
+      --webkit-transform-style: preserve-3d;
     width: 3rem;
   }
 
@@ -388,6 +391,7 @@ select.form{
 
 /* navbar swipe effect :) */
   .expand-nav {
+      --webkit-transform-style: preserve-3d;
     width: 10rem;
   }
 
@@ -425,10 +429,12 @@ p {
 }
 
   .navbar {
+    --webkit-transform-style: preserve-3d;
     width: 6rem;
   }
 
   .navbar:hover {
+    --webkit-transform-style: preserve-3d;
     width: 14rem;
   }
 
@@ -452,24 +458,29 @@ p {
     }
 
     .navbar:hover .logo svg {
+        --webkit-transform-style: preserve-3d;
         transform: rotate(-280deg);
         margin-left: 10rem;
       }
 
   .navbar:hover .link-text {
+      --webkit-transform-style: preserve-3d;
     display: inline;
   }
 
   .navbar:hover .logo-text {
+      --webkit-transform-style: preserve-3d;
     left: 0px;
   }
 
   /* navbar swipe effect :) */
     .expand-nav {
+        --webkit-transform-style: preserve-3d;
       width: 14rem;
     }
 
     .expand-nav .logo svg {
+        --webkit-transform-style: preserve-3d;
       transform: rotate(-280deg);
       margin-left: 10rem;
     }
